--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -7,13 +7,24 @@
     tools:context=".View.Fragments.ListFragment">
 
     <Button
+        android:id="@+id/done"
+        android:layout_width="115dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="4dp"
+        android:text="@string/done"
+        android:backgroundTint="@color/done"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/missed"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
         android:id="@+id/missed"
         android:layout_width="115dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="4dp"
         android:text="@string/missed"
+        android:backgroundTint="@color/missed"
         app:layout_constraintEnd_toStartOf="@+id/done"
-        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/upcoming"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -21,29 +32,18 @@
         android:id="@+id/upcoming"
         android:layout_width="115dp"
         android:layout_height="48dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="4dp"
         android:text="@string/upcoming"
+        android:backgroundTint="@color/upcoming"
         app:layout_constraintEnd_toStartOf="@+id/missed"
-        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <Button
-        android:id="@+id/done"
-        android:layout_width="115dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:text="@string/done"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/missed"
         app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/fragmentHolder"
         android:name="com.example.eventplanner.View.Fragments.ChildListFragments.UpcomingFragment"
         android:layout_width="match_parent"
-        android:layout_height="658dp"
+        android:layout_height="672dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
