--- a/app/src/main/res/layout/fragment_missed.xml
+++ b/app/src/main/res/layout/fragment_missed.xml
@@ -6,6 +6,7 @@
     tools:context=".View.Fragments.ChildListFragments.MissedFragment">
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 </FrameLayout>
