--- a/app/src/main/res/layout/layout_list_row.xml
+++ b/app/src/main/res/layout/layout_list_row.xml
@@ -13,10 +13,10 @@
         android:contentDescription="@string/event_image" />
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="250dp"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:layout_marginStart="50dp"
+        android:layout_marginStart="20dp"
         android:layout_marginEnd="0dp">
         <TextView
             android:id="@+id/name"
@@ -25,7 +25,7 @@
             android:layout_weight="1"
             android:text="@string/textview"
             android:paddingTop="10dp"
-            android:textSize="16sp"/>
+            android:textSize="15sp"/>
 
         <TextView
             android:id="@+id/date"
@@ -33,6 +33,14 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="@string/textview"
-            android:textSize="16sp"/>
+            android:textSize="15sp"/>
     </LinearLayout>
+
+    <ImageButton
+        android:id="@+id/menu"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:src="@drawable/ic_baseline_keyboard_arrow_down_24"
+         android:layout_marginTop="30dp"
+        />
 </LinearLayout>
