--- a/app/src/main/res/layout/fragment_bottom_sheet.xml
+++ b/app/src/main/res/layout/fragment_bottom_sheet.xml
@@ -27,21 +27,18 @@
             <TextView
                 android:id="@+id/category"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/add_category" />
+                android:layout_height="wrap_content" />
 
             <TextView
                 android:id="@+id/location"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/location" />
+                android:layout_height="wrap_content" />
         </LinearLayout>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/date"
-            android:text="@string/date"
             android:layout_marginLeft="150dp"
             android:textStyle="bold"/>
 
