--- a/app/src/main/res/layout/fragment_insights.xml
+++ b/app/src/main/res/layout/fragment_insights.xml
@@ -15,8 +15,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintLeft_toRightOf="parent"
-        android:orientation="vertical"
-        android:background="@color/teal_700">
+        android:orientation="vertical">
 
         <com.github.mikephil.charting.charts.LineChart
             android:id="@+id/lineChart"
@@ -29,7 +28,7 @@
         <com.github.mikephil.charting.charts.BarChart
             android:id="@+id/barChart"
             android:layout_width="match_parent"
-            android:layout_height="547dp"
+            android:layout_height="469dp"
             android:padding="9dp"
             tools:layout_editor_absoluteX="8dp"
             tools:layout_editor_absoluteY="234dp" />
