--- a/app/src/main/res/layout/layout_grid_recyclerview.xml
+++ b/app/src/main/res/layout/layout_grid_recyclerview.xml
@@ -42,6 +42,12 @@
             android:layout_marginLeft="14dp"
             android:layout_marginTop="10dp"/>
 
+        <ImageButton
+            android:id="@+id/menu"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:srcCompat="@drawable/ic_baseline_keyboard_arrow_down_24" />
+
 
     </LinearLayout>
 
