--- a/app/src/main/res/layout/fragment_bottom_sheet.xml
+++ b/app/src/main/res/layout/fragment_bottom_sheet.xml
@@ -39,7 +39,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/date"
-            android:layout_marginLeft="150dp"
+            android:text="123"
+            android:layout_marginLeft="10dp"
             android:textStyle="bold"/>
 
     </LinearLayout>
