--- a/app/src/main/res/layout/layout_cardview_linear_row.xml
+++ b/app/src/main/res/layout/layout_cardview_linear_row.xml
@@ -19,21 +19,16 @@
             android:layout_width="379dp"
             android:layout_height="match_parent"
             android:orientation="horizontal">
+
             <TextView
                 android:id="@+id/name"
-                android:layout_width="300dp"
-                android:layout_height="wrap_content"
+                android:layout_width="360dp"
+                android:layout_height="33dp"
                 android:layout_marginLeft="14dp"
                 android:layout_marginTop="10dp"
                 android:text="Title"
                 android:textColor="@color/black"
                 android:textSize="17sp" />
-            <ImageButton
-                android:id="@+id/menu"
-                android:layout_marginLeft="30dp"
-                android:layout_width="40dp"
-                android:layout_height="wrap_content"
-                app:srcCompat="@drawable/ic_baseline_keyboard_arrow_down_24" />
 
         </LinearLayout>
         <ImageView
