--- a/app/src/main/res/layout/layout_list_row_category.xml
+++ b/app/src/main/res/layout/layout_list_row_category.xml
@@ -29,17 +29,18 @@
 
         <ImageButton
             android:id="@+id/menu"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:src="@drawable/ic_baseline_keyboard_arrow_down_24"
-            android:layout_marginTop="15dp"
-            />
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:backgroundTint="@android:color/transparent"
+            android:layout_marginTop="3dp"
+            android:src="@drawable/ic_baseline_keyboard_arrow_down_24" />
     </LinearLayout>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_marginLeft="60dp"
-        android:visibility="invisible" />
+        android:backgroundTint="@android:color/holo_green_light"
+        android:background="@color/teal_200"
+        android:paddingLeft="60dp" />
 </LinearLayout>
