--- a/app/src/main/res/layout/simple_row.xml
+++ b/app/src/main/res/layout/simple_row.xml
@@ -5,7 +5,12 @@
     android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="30dp"
-    android:backgroundTint="#728bb3">
+    android:backgroundTint="@android:color/holo_green_light"
+    android:background="@android:color/holo_blue_light"
+    android:outlineAmbientShadowColor="@color/black"
+    android:layout_margin="0.8dp"
+    android:elevation="20dp"
+    >
 
 
         <TextView
@@ -15,7 +20,7 @@
             android:layout_marginStart="24dp"
             android:text="@string/textview"
             android:textSize="16sp"
-            android:textColor="@color/black"
+            android:textColor="@color/white"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
