--- a/app/src/main/res/layout/fragment_insights.xml
+++ b/app/src/main/res/layout/fragment_insights.xml
@@ -6,7 +6,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:fillViewport="true"
     android:orientation="vertical"
-    tools:context=".View.Fragments.InsightsFragment">
+    tools:context=".view.fragments.InsightsFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
