--- a/app/src/main/res/layout/fragment_missed.xml
+++ b/app/src/main/res/layout/fragment_missed.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".View.Fragments.ChildListFragments.MissedFragment">
+    tools:context=".view.fragments.childListFragments.MissedFragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
