Done ig more bit left

--- a/app/src/main/res/layout/fragment_calendar.xml
+++ b/app/src/main/res/layout/fragment_calendar.xml
@@ -1,45 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.fragments.CalendarFragment">
+    tools:context=".view.fragments.CalendarFragment"
+    android:orientation="vertical">
 
 
-    <com.prolificinteractive.materialcalendarview.MaterialCalendarView
+        <com.prolificinteractive.materialcalendarview.MaterialCalendarView
         android:id="@+id/calendarView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
         app:mcv_selectionColor="#00F"
-        app:mcv_showOtherDates="all" />
+        app:mcv_showOtherDates="all"
+        android:clipChildren="true"
+        android:layout_alignParentTop="true"/>
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:layout_marginBottom="276dp"
-        android:text="@string/avcash"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.048"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/calendarView" />
+
 
     <androidx.recyclerview.widget.RecyclerView
+        android:paddingLeft="10dp"
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
-        android:layout_height="255dp"
+        android:layout_height="180dp"
+        android:layout_alignParentBottom="true"
         android:layout_marginStart="1dp"
-        android:layout_marginEnd="1dp"
-        android:layout_marginBottom="1dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        android:layout_marginBottom="-1dp" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</RelativeLayout>
