--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,72 +7,77 @@
     android:id="@+id/coordinator"
     tools:context=".view.activities.MainActivity">
 
+
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/constraintLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-    <com.google.android.material.bottomnavigation.BottomNavigationView
-        android:id="@+id/bottomNavigationView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:menu="@menu/bottom_nav_menu"/>
+        <androidx.fragment.app.FragmentContainerView
+            android:id="@+id/fragmentHolder"
+            android:name="com.example.eventplanner.view.fragments.InsightsFragment"
+            android:layout_width="409dp"
+            android:layout_height="675dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:layout="@layout/fragment_insights" />
+        <com.google.android.material.bottomnavigation.BottomNavigationView
+            android:id="@+id/bottomNavigationView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:menu="@menu/bottom_nav_menu" />
 
-    <androidx.fragment.app.FragmentContainerView
-        android:id="@+id/fragmentHolder"
-        android:name="com.example.eventplanner.view.fragments.InsightsFragment"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.285"
-        tools:layout="@layout/fragment_insights" />
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/addBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="28dp"
+            android:elevation="30dp"
+            android:outlineAmbientShadowColor="@color/black"
+            android:outlineSpotShadowColor="@color/black"
 
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/addBtn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="28dp"
-        android:layout_marginBottom="20dp"
-        android:focusable="true"
-        android:tint="@color/white"
-        android:clickable="true"
-        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:srcCompat="@drawable/ic_baseline_add_24" />
+            android:layout_marginBottom="20dp"
+            android:clickable="true"
+            android:focusable="true"
+            android:tint="@color/white"
+            app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:srcCompat="@drawable/ic_baseline_add_24" />
 
-    <TextView
-        android:id="@+id/textAddEvent"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/add_event"
-        app:layout_constraintBottom_toTopOf="@+id/addBtn"
-        app:layout_constraintEnd_toEndOf="@+id/addEvent"
-        android:visibility="invisible"
-        android:textColor="@color/purple_700"
-        app:layout_constraintStart_toStartOf="@+id/addEvent"
-        app:layout_constraintTop_toBottomOf="@+id/addEvent"
-        app:layout_constraintVertical_bias="0.0" />
+        <TextView
+            android:id="@+id/textAddEvent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/add_event"
+            android:textColor="@color/purple_700"
+            android:visibility="invisible"
+            app:layout_constraintBottom_toTopOf="@+id/addBtn"
+            app:layout_constraintEnd_toEndOf="@+id/addEvent"
+            app:layout_constraintStart_toStartOf="@+id/addEvent"
+            app:layout_constraintTop_toBottomOf="@+id/addEvent"
+            app:layout_constraintVertical_bias="0.0" />
 
-    <TextView
-        android:id="@+id/textAddCategory"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/add_category"
-        android:visibility="invisible"
-        android:textColor="@color/purple_700"
-        app:layout_constraintBottom_toTopOf="@+id/addEvent"
-        app:layout_constraintEnd_toEndOf="@+id/addCategory"
-        app:layout_constraintStart_toStartOf="@+id/addCategory"
-        app:layout_constraintTop_toBottomOf="@+id/addCategory" />
+        <TextView
+            android:id="@+id/textAddCategory"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/add_category"
+            android:textColor="@color/purple_700"
+            android:visibility="invisible"
+            app:layout_constraintBottom_toTopOf="@+id/addEvent"
+            app:layout_constraintEnd_toEndOf="@+id/addCategory"
+            app:layout_constraintStart_toStartOf="@+id/addCategory"
+            app:layout_constraintTop_toBottomOf="@+id/addCategory" />
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/addEvent"
 
+            android:translationZ="90dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="28dp"
@@ -101,5 +106,6 @@
             app:srcCompat="@drawable/ic_baseline_category_24" />
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
