--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -15,10 +15,11 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/displayName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
+        android:textSize="32sp"
         android:text="TextView"
         app:layout_constraintEnd_toStartOf="@+id/imageView2"
         app:layout_constraintHorizontal_bias="0.062"
@@ -36,7 +37,8 @@
         app:layout_constraintTop_toBottomOf="@+id/imageView2">
 
         <ImageView
-            android:layout_width="wrap_content"
+            android:layout_marginLeft="25dp"
+            android:layout_width="32dp"
             android:layout_height="match_parent"
             android:src="@drawable/ic_baseline_info_24"/>
         <TextView
@@ -44,8 +46,33 @@
             android:layout_height="match_parent"
             android:textSize="20sp"
             android:layout_marginTop="8dp"
-            android:layout_marginLeft="10dp"
+            android:layout_marginLeft="20dp"
             android:text="About"/>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/logout"
+        android:layout_width="413dp"
+        android:layout_height="47dp"
+        android:orientation="horizontal"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/about">
+
+        <ImageView
+            android:layout_width="47dp"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="20dp"
+            android:src="@mipmap/ic_logout" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="8dp"
+            android:text="Logout"
+            android:textSize="20sp" />
 
     </LinearLayout>
 
