--- a/app/src/main/res/layout/layout_list_row_category.xml
+++ b/app/src/main/res/layout/layout_list_row_category.xml
@@ -15,7 +15,7 @@
                     android:layout_height="50dp"
                     android:orientation="vertical"
                     android:layout_marginStart="20dp"
-                    android:layout_marginEnd="100dp">
+                    android:layout_marginEnd="70dp">
                     <TextView
                         android:id="@+id/name"
                         android:layout_width="wrap_content"
@@ -31,7 +31,7 @@
             android:id="@+id/menu"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:backgroundTint="@android:color/transparent"
+            android:backgroundTint="#C0D4F4"
             android:layout_marginTop="3dp"
             android:src="@drawable/ic_baseline_keyboard_arrow_down_24" />
     </LinearLayout>
