--- a/app/src/main/res/layout/layout_grid_recyclerview.xml
+++ b/app/src/main/res/layout/layout_grid_recyclerview.xml
@@ -19,8 +19,8 @@
             android:id="@+id/image"
             android:layout_width="match_parent"
             android:layout_height="150dp"
-            android:src="@drawable/ic_baseline_profile_24"
-            android:scaleType="fitXY"/>
+            android:scaleType="fitXY"
+            android:src="@drawable/ic_round_image_24" />
 
         <TextView
             android:id="@+id/name"
