--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,6 +15,8 @@
 
         <androidx.fragment.app.FragmentContainerView
             android:id="@+id/fragmentHolder"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
             android:name="com.example.eventplanner.view.fragments.InsightsFragment"
             android:layout_width="409dp"
             android:layout_height="675dp"
